# archon

./: .env  .env.example  .gitignore  ADL.md  ARCHITECTURE.md  DEPLOYMENT.md  README.md  RUNNING.md  docker-compose.override.yml  docker-compose.yml
.github/: copilot-instructions.md
ai-architect-agent/: .coverage  pyproject.toml
ai-architect-agent/app/: main.py
ai-architect-agent/app/api/: agent.py
ai-architect-agent/app/llm/: client.py
ai-architect-agent/app/models/: __init__.py  context.py
ai-architect-agent/app/observability/: __init__.py  tracing.py
ai-architect-agent/app/pipeline/: __init__.py  formatter.py  graph.py  nodes.py
ai-architect-agent/app/prompts/: architecture_generator.j2  diagram_generator.j2  loader.py  requirement_challenge.j2  tactics_advisor.j2
ai-architect-agent/app/review/: agent.py  context.py  nodes.py
ai-architect-agent/app/tools/: architecture_generator.py  base.py  challenge_engine.py  diagram_generator.py  registry.py
ai-architect-agent/tests/integration/: test_agent_endpoint.py
ai-architect-agent/tests/unit/: test_architecture.py  test_formatter.py  test_llm_client.py  test_metrics.py  test_pipeline_nodes.py  test_pipeline_reiteration.py  test_review_nodes.py  test_sse_keepalive.py  test_tracing.py
ai-architect-agent/tests/unit/tools/: test_architecture_generator.py  test_buy_vs_build_analyzer.py  test_challenge_engine.py  test_characteristic_reasoner.py  test_diagram_generator.py  test_fmea_analyzer.py  test_requirement_parser.py  test_tactics_advisor.py  test_trade_off_engine.py  test_weakness_analyzer.py
(+186 files in other folders)
